tdf#97752 SVGIO ignore not matching parent paints

fill attributes can have ONE of 3 kinds of paints:
* pain colour fills
* gradient fills
* pattern fills
if element has a fill we should not get fills of an other
kind from parent

Change-Id: I376a8fea4a7185b037a069a28191b7f37f6788bd
Signed-off-by: Jochen Nitschke <j.nitschke+logerrit@ok.de>